src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwP0.25-dhU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: P0.25\ndefault window height: U\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 292 × 680, bounds: 1240 × 680, states: []
size: 292 × 680, bounds: 1240 × 680, states: [Activated]
